--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,10 +1,13 @@
 {% extends 'rango/base.html' %}
+{% load staticfiles %}
 
 {% block title_block %}
     Change Password
 {% endblock %}
 
-
+{% block JS_block %}
+<script src="{​​​% static 'rango_js/passwordvalidator.js' %}"></script>
+{% endblock %}
 
 {% block body_block %}
 <style>
@@ -18,23 +21,6 @@
         font-size:15px;
     }
 </style>
-
-<script type="text/javascript">  
-    var passwordvalidate = function() {
-      if (document.getElementById('id_new_password1').value == document.getElementById('id_new_password2').value) {
-             document.getElementById('validationmessage').style.color = 'green';
-             document.getElementById('validationmessage').innerHTML = 'Password Matched';
-     } else {
-             document.getElementById('validationmessage').style.color = 'red';
-             document.getElementById('validationmessage').innerHTML = 'Password not match';
-             }
-     }
-
-     
- </script>
-
-
-
 
 
 <div class="container pt-5">
@@ -64,18 +50,6 @@
             </div>
         </div>
     
-        
-        
-        <!--<div class ="row">
-            <div class="col-sm-5">
-                <label for="id_new_password1">New password:</label>
-            </div>
-                <input type="password" name="id_new_password1" required="" id="id_new_password1">
-                <span class="helptext" style="color:red">
-                    {{form.id_new_password1.errors}} 
-                </span>
-            </div>
-        </div>-->
 
         <div class ="row">
             <div class="col-sm-5">
